# zerp

./: .gitignore  Cargo.template.toml  Cargo.toml  Makefile  README.md  level_map.json  script.rhai  world.json
crates/zp_core/: Cargo.toml
crates/zp_core/src/: data_types.rs  lib.rs  type_impls.rs  type_impls_std.rs
crates/zp_service/: Cargo.toml
crates/zp_service/src/: lib.rs  service.rs
src/: main.rs
src/models/: common.rs  common_rhai.rs  mod.rs  world.rs  worldmap.rs  worldmap_rhai.rs  worldobject.rs  worldobject_rhai.rs
src/models/object/: mod.rs
src/models/person/: mod.rs
