[package]
name = "zerp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"


[dependencies.rhai]
version = "1.18.0"
features = ["only_i32", "f32_float"]
